@@ -61,6 +61,8 @@ Extension Modules
 Library
 -------
 
+- Patch #1046831: Use get_python_version where appropriate in sysconfig.py.
+
 - Patch #1117454: Remove code to special-case cookies without values
   in LWPCookieJar.
 
